--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -9,7 +9,8 @@
   "typings": "lib/typescript/index.d.ts",
   "scripts": {
     "build": "bob build",
-    "clean": "rm -rf lib"
+    "clean": "rm -rf lib",
+    "dev:web": "cd example/native && yarn web --clear"
   },
   "devDependencies": {
     "@types/lodash.merge": "^4.6.7",
@@ -25,7 +26,8 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "lodash.merge": "^4.6.2"
+    "lodash.merge": "^4.6.2",
+    "@gluestack/css-injector": "*"
   },
   "peerDependencies": {
     "react": "*",
