--- a/popper/example/native/package.json
+++ b/popper/example/native/package.json
@@ -14,18 +14,19 @@
     "find-yarn-workspace-root": "^2.0.0"
   },
   "devDependencies": {
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-web": "~0.18.9",
     "@babel/core": "^7.12.9",
     "@expo/webpack-config": "^0.17.2",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
     "babel-loader": "8.2.5",
     "ts-loader": "~8.2.0",
-    "typescript": "^4.6.3"
+    "typescript": "4.2.2"
   },
-  "peerDependencies": {},
+  "peerDependencies": {
+    "react": "*",
+    "react-dom": "*",
+    "react-native": "*",
+    "react-native-web": "*"
+  },
   "private": true
 }
