--- a/packages/ui/example/native/package.json
+++ b/packages/ui/example/native/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
-    "find-yarn-workspace-root": "^2.0.0"
+    "find-yarn-workspace-root": "^2.0.0",
+    "@gluestack/popper": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
