--- a/styled/package.json
+++ b/styled/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gluestack/styled",
+  "name": "@gluestack/ui-styled",
   "version": "0.0.1",
   "main": "lib/commonjs/index",
   "types": "lib/typescript/index.d.ts",
