--- a/packages/ui/example/next/package.json
+++ b/packages/ui/example/next/package.json
@@ -15,16 +15,12 @@
     "expo-asset": "^8.6.2",
     "expo-font": "^10.0.3",
     "next": "^12.3.4",
-    "react": "^18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.68.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^4.1.2",
     "react-native-svg": "^13.6.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-vector-icons-for-web": "^0.1.7",
-    "react-native-web": "^0.18.10",
     "react-native-web-linear-gradient": "^1.1.2",
     "@gluestack/ui-components": "*"
   },
@@ -44,5 +40,11 @@
     "next-transpile-modules": "^10.0.0",
     "typescript": "4.5.2",
     "webpack": "4"
+  },
+  "peerDependencies": {
+    "react": "*",
+    "react-dom": "*",
+    "react-native": "*",
+    "react-native-web": "*"
   }
 }
