--- a/.eslintignore
+++ b/.eslintignore
@@ -4,5 +4,6 @@ packages/**/build
 packages/**/node_modules
 packages/**/lib
 packages/**/cli.js
+packages/**/example/**/babel.config.js
 # packages/**/example
 # !.build/test.js
