--- a/packages/ui/example/native/package.json
+++ b/packages/ui/example/native/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gluestack/ui-components",
-  "version": "1.0.0",
+  "version": "0.1.0-alpha.0",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -19,14 +19,14 @@
     "build": "bob build"
   },
   "dependencies": {
-    "react-native-safe-area-context": "^4.4.1",
+    "@gluestack/ui-creator": "*",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/slider": "4.2.4",
     "expo": "^47.0.0",
     "expo-status-bar": "~1.4.2",
     "find-yarn-workspace-root": "^2.0.0",
-    "@gluestack/ui-creator": "*"
+    "react-native-safe-area-context": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -41,23 +41,22 @@
     "@storybook/addon-react-native-web": "^0.0.19",
     "@storybook/react": "^6.5.14",
     "@storybook/react-native": "next",
-    "babel-plugin-react-docgen-typescript": "^1.5.1",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "babel-loader": "^8.2.3",
+    "babel-plugin-react-docgen-typescript": "^1.5.1",
     "babel-plugin-react-native-web": "^0.18.10",
-    "typescript": "4.2.2",
-    "react-native-builder-bob": "^0.20.3"
+    "react-native-builder-bob": "^0.20.3",
+    "typescript": "4.2.2"
   },
   "peerDependencies": {
+    "@gluestack/ui-creator": "*",
+    "@gluestack/ui-styled": "*",
     "react": "*",
     "react-dom": "*",
     "react-native": "*",
-    "react-native-web": "*",
-    "@gluestack/ui-creator": "*",
-    "@gluestack/ui-styled": "*"
+    "react-native-web": "*"
   },
-  "private": true,
   "react-native-builder-bob": {
     "source": "src",
     "output": "lib",
@@ -66,7 +65,7 @@
       [
         "module",
         {
-          "configFile": false
+          "configFile": true
         }
       ],
       "typescript"
