--- a/ui/package.json
+++ b/ui/package.json
@@ -41,7 +41,8 @@
     "@react-stately/radio": "^3.6.1",
     "@react-stately/slider": "^3.2.3",
     "@react-stately/toggle": "^3.4.3",
-    "react-native-svg": "^13.6.0"
+    "react-native-svg": "^13.6.0",
+    "@gluestack/popper": "*"
   },
   "peerDependencies": {
     "react": "*",
