--- a/packages/popper/package.json
+++ b/packages/popper/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gluestack/popper",
-  "version": "0.1.0-alpha.3",
+  "version": "0.1.0-alpha.4",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -8,6 +8,8 @@
   "source": "src/index",
   "typings": "lib/typescript/index.d.ts",
   "scripts": {
+    "prepare": "bob build",
+    "release": "release-it",
     "build": "bob build",
     "clean": "rm -rf lib",
     "dev:web": "cd example/native && yarn web --clear"
