--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gluestack/ui-styled",
-  "version": "0.1.0-alpha.2",
+  "version": "0.1.0-alpha.3",
   "main": "lib/commonjs/index",
   "types": "lib/typescript/index.d.ts",
   "module": "lib/module/index",
@@ -11,7 +11,8 @@
     "prepare": "bob build",
     "release": "release-it",
     "build": "bob build",
-    "clean": "rm -rf lib"
+    "clean": "rm -rf lib",
+    "commit-test": "yarn prepare"
   },
   "devDependencies": {
     "@types/lodash.merge": "^4.6.7",
