--- a/styled/package.json
+++ b/styled/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gluestack/ui-styled",
-  "version": "0.1.0-alpha.4",
+  "version": "0.1.0-alpha.5",
   "main": "lib/commonjs/index",
   "types": "lib/typescript/index.d.ts",
   "module": "lib/module/index",
@@ -11,8 +11,7 @@
     "prepare": "bob build",
     "release": "release-it",
     "build": "bob build",
-    "clean": "rm -rf lib",
-    "commit-test": "yarn prepare"
+    "clean": "rm -rf lib"
   },
   "devDependencies": {
     "@types/lodash.merge": "^4.6.7",
@@ -42,10 +41,7 @@
     "targets": [
       "commonjs",
       [
-        "module",
-        {
-          "babelrc": true
-        }
+        "module"
       ],
       "typescript"
     ]
