--- a/packages/popper/package.json
+++ b/packages/popper/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gluestack/popper",
-  "version": "0.1.0-alpha.4",
+  "version": "0.1.0-alpha.5",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -39,10 +39,7 @@
     "targets": [
       "commonjs",
       [
-        "module",
-        {
-          "configFile": true
-        }
+        "module"
       ],
       "typescript"
     ]
