--- a/ui/example/native/package.json
+++ b/ui/example/native/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@gluestack/ui-creator": "*",
     "@gluestack/ui-styled": "*",
+    "react-native-svg": "^13.6.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/slider": "4.2.4",
