--- a/ui/example/native/package.json
+++ b/ui/example/native/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@gluestack/ui-components",
   "private": false,
-  "version": "0.1.0-alpha.5",
+  "version": "0.1.0-alpha.6",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -24,13 +24,13 @@
   "dependencies": {
     "@gluestack/ui-creator": "*",
     "@gluestack/ui-styled": "*",
-    "react-native-svg": "^13.6.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/slider": "4.2.4",
     "expo": "^47.0.0",
     "expo-status-bar": "~1.4.2",
-    "react-native-safe-area-context": "^4.4.1"
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-svg": "^13.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
