--- a/ui/example/native/tsconfig.json
+++ b/ui/example/native/tsconfig.json
@@ -5,15 +5,28 @@
     "paths": {
       "@gluestack/ui": ["../../src/index"]
     },
-    "allowSyntheticDefaultImports": true,
-    "jsx": "react-native",
-    "lib": ["dom", "esnext"],
-    "allowJs": true,
-    "moduleResolution": "node",
+    "emitDeclarationOnly": true,
     "noEmit": false,
-    "skipLibCheck": true,
+    "declaration": true,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": true,
+    "esModuleInterop": true,
+    "importsNotUsedAsValues": "error",
+    "forceConsistentCasingInFileNames": true,
+    "jsx": "react",
+    "lib": ["esnext", "dom"],
+    "module": "esnext",
+    "moduleResolution": "node",
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
+    "noImplicitUseStrict": false,
+    "noStrictGenericChecks": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": true,
     "resolveJsonModule": true,
-    "strict": true
+    "skipLibCheck": true,
+    "strict": true,
+    "target": "esnext"
   },
   "include": ["src/ui-components", "src/index.tsx"],
   "exclude": ["lib", "node_modules"]
