--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@gluestack/ui-creator": ["../creator/src/index"]
+      "@gluestack/ui-creator": ["../creator/src/index"],
+      "@gluestack/ui": ["./src/index"]
     },
     "emitDeclarationOnly": true,
     "noEmit": false,
@@ -28,6 +29,6 @@
     "strict": true,
     "target": "esnext"
   },
-  "include": ["src/ui-components", "src/index.tsx"],
+  "include": ["src"],
   "exclude": ["lib", "node_modules"]
 }
