--- a/media-query/package.json
+++ b/media-query/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gluestack/styled",
+  "name": "@gluestack/media-query",
   "version": "0.0.1",
   "main": "lib/commonjs/index",
   "types": "lib/typescript/index.d.ts",
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "bob build",
     "clean": "rm -rf lib",
-    "dev:web": "cd example/native && yarn web --clear"
+    "dev:web": "cd example/native && yarn web"
   },
   "devDependencies": {
     "@types/lodash.merge": "^4.6.7",
@@ -27,9 +27,7 @@
   },
   "dependencies": {
     "lodash.merge": "^4.6.2",
-    "@gluestack/css-injector": "*",
-    "@gluestack/media-query": "*",
-    "@gluestack/system-preference-query": "*"
+    "react-native-media-query": "^2.0.0"
   },
   "peerDependencies": {
     "react": "*",
