--- a/packages/ui/.babelrc.json
+++ b/packages/ui/.babelrc.json
@@ -1,3 +1,4 @@
 {
-  "presets": ["module:metro-react-native-babel-preset"]
+  "presets": ["module:metro-react-native-babel-preset"],
+  "plugins": ["transform-remove-console"]
 }
