--- a/packages/styled/tsconfig.json
+++ b/packages/styled/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "include": ["./src"],
   "exclude": ["node_modules", "example"],
-  "path": { "@gluestack/styled": ["../styled/src"] },
+  "path": {
+    "@gluestack/styled": ["../styled/src"],
+    "@gluestack/ui-convert-utility-to-sx": ["../ui-convert-utility-to-sx/src"]
+  },
   "compilerOptions": {
     "emitDeclarationOnly": true,
     "noEmit": false,
