--- a/package.json
+++ b/package.json
@@ -29,13 +29,5 @@
     "release-it": "^15.5.1",
     "turbo": "latest"
   },
-  "packageManager": "yarn@1.22.17",
-  "lint-staged": {
-    "*.{js,ts,tsx, jsx}": [
-      "eslint --quiet --fix"
-    ],
-    "*.{json,md,html,js,jsx,ts,tsx}": [
-      "prettier --write"
-    ]
-  }
+  "packageManager": "yarn@1.22.17"
 }
