--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,4 @@
 {
-  "*.{js,ts,tsx,jsx}": ["eslint --quiet --fix", "tsc --skipLibCheck --noEmit"],
+  "*.{js,ts,tsx,jsx}": ["eslint --quiet --fix", "tsc-files --noEmit"],
   "*.{json,md,html,js,jsx,ts,tsx}": ["prettier --write"]
 }
