--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lint-staged": "^13.1.0",
     "prettier": "^2.7.1",
     "release-it": "^15.5.1",
+    "tsc-files": "^1.1.3",
     "turbo": "latest",
     "typescript": "^4.9.4"
   },
