--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,8 @@ jobs:
       - name: Run test Build
         run: |
           cd ./ui
+          ls
+          git branch
           git checkout development
           yes | yarn
 
