--- a/packages/styled/tsconfig.json
+++ b/packages/styled/tsconfig.json
@@ -3,15 +3,13 @@
   "exclude": ["node_modules", "example"],
   "path": {
     "@gluestack/ui-styled": ["./src"],
-    "@gluestack/ui-convert-utility-to-sx": ["../ui-convert-utility-to-sx/src"],
     "@gluestack/media-query": ["../media-query/src"],
-    "@gluestack/cssify": ["../cssify/src"],
+    "@gluestack/cssify": ["../../cssify/src"],
     "@gluestack/ui-convert-utility-to-sx": ["../ui-convert-utility-to-sx/src"]
   },
   "compilerOptions": {
     "emitDeclarationOnly": true,
     "noEmit": false,
-    "baseUrl": ".",
     "declaration": true,
     "allowUnreachableCode": false,
     "allowUnusedLabels": true,
