--- a/styled/tsconfig.json
+++ b/styled/tsconfig.json
@@ -4,7 +4,7 @@
   "path": {
     "@gluestack/ui-styled": ["./src"],
     "@gluestack/media-query": ["../media-query/src"],
-    "@gluestack/cssify": ["../../cssify/src"],
+    "@gluestack/cssify": ["../cssify/src"],
     "@gluestack/ui-convert-utility-to-sx": ["../ui-convert-utility-to-sx/src"]
   },
   "compilerOptions": {
