--- a/styled/example/native/tsconfig.json
+++ b/styled/example/native/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "paths": {
-      "@gluestack/ui-styled": ["../../src"]
+      "@gluestack/ui-styled": ["../../src/index"],
+      "@gluestack/config": ["../../../config/src"]
     },
     "emitDeclarationOnly": true,
     "noEmit": false,
